--- a/sample.env
+++ b/sample.env
@@ -10,7 +10,10 @@ USER_SESSION=
 OWNER_LINK=
 SUPPORT_LINK=
 TELEGRAPH_PHOTO=
+LOGGER_GROUP_ID=
+MONGO_DB_URI=
 
 # Spotify API
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
+
