--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pyrogram==2.0.106
-tgcrypto==1.2.5
-py-tgcalls==0.9.7
-spotipy==2.23.0
-requests==2.31.0
-python-dotenv==1.0.1
-pymongo==4.6.1
+pyrogram
+tgcrypto
+pytgcalls
+pymongo
+spotipy
+requests
+python-dotenv
